# domain-skills

./: .gitignore  README.md  pyproject.toml
domain/cuda/krnopt-cuda-domain-optimization/references/: moe-kernel-design.md
domain/cuda/krnopt-cuda-domain-optimization/references/moe-kernel-design/: block-sparse-moe.md  communication-fusion.md  expert-mlp-fusion.md  fused-scatter-gemm.md  hopper-backend-selection.md  hopper-fp8-forward-pipeline.md  padding-free-grouped-gemm.md  persistent-grouped-scheduling.md  sparse-dispatch-combine.md  static-batched-metadata.md  whole-operator-persistent-fusion.md
domain/cuda/krnopt-cuda-generic-optimization/: SKILL.md
domain/cuda/krnopt-cuda-generic-optimization/references/: bottleneck-to-direction-subskill.md  source-localization-subskill.md  vendor-cuda-primitive-selection-subskill.md
domain/cuda/krnopt-hw-aware-optimization/references/: h100-sm90-moe-practices.md  hardware-utilization-targets-subskill.md
src/domain_skills/: __init__.py
