[project]
dependencies = ["scipy>=1.17.1,<2", "mdutils>=1.8.1,<2", "ruff>=0.15.14,<0.16", "mkdocs-material>=9.7.6,<10", "mypy>=2.1.0,<3", "attrs>=26.1.0,<27", "omegaconf>=2.3.0,<3", "imageio>=2.37.3,<3"]
name = "domain-skills"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/domain_skills"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
domain_skills = { path = ".", editable = true }

[tool.pixi.tasks]
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy src"

[tool.pixi.dependencies]
python = "3.13.*"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
